--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+torch = "^2.6.0"
+torchvision = "^0.21.0"
+gymnasium = "^1.1.1"
 
 
 [build-system]
