--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,13 @@
 [tool.poetry]
 name = "frl"
 version = "0.1.0"
-description = "federated reinforcement learning experiments."
+description = "federated learning experiments"
 authors = ["frankcholula <lu.phrank@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = "^2.6.0"
-torchvision = "^0.21.0"
-gymnasium = "^1.1.1"
 
 
 [build-system]
