downgrade numpy version to make old gym work.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+gym-super-mario-bros = "^7.4.0"
+numpy = "<1.24"
 
 
 [build-system]
